--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -62,9 +62,11 @@
   font-weight: 600;
   font-size: 14px;
   color: #b29f7e;
-  text-align: right;
   cursor: pointer;
   margin-bottom: 1rem;
+  background: none;
+  border: none;
+  float: right;
 }
 
 .sing-in-btn {
@@ -98,6 +100,22 @@
 .sing-up-request {
   color: #b29f7e;
   cursor: pointer;
+}
+
+.link-button {
+  background: none;
+  border: none;
+  padding-left: 5px;
+  font: inherit;
+  cursor: pointer;
+
+  text-decoration: none;
+}
+.forget-password:hover {
+  text-decoration: underline;
+}
+.link-button:hover {
+  text-decoration: underline;
 }
 
 /* Tablet */
